apps/base/comafeed/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commafeed
  namespace: commafeed
  labels:
    app: commafeed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commafeed
  template:
    metadata:
      labels:
        app: commafeed
    spec:
      containers:
        - name: commafeed
          image: athou/commafeed:latest-h2
          ports:
            - containerPort: 8082
          resources:
            limits:
              memory: 256Mi 
            requests:
              memory: 128Mi 
          volumeMounts:
            - name: commafeed-data
              mountPath: /commafeed/data
      volumes:
        - name: commafeed-data
          persistentVolumeClaim:
            claimName: commafeed-pvc
      restartPolicy: Always
