apps/base/comafeed/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: commafeed-service
  namespace: commafeed
  labels:
    app: commafeed
spec:
  selector:
    app: commafeed
  ports:
    - protocol: TCP
      port: 8082 # Port the service will listen on (outside the cluster)
      targetPort: 8082 # Port on the pod the service will forward to
  type: ClusterIP
