apps/base/comafeed/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: commafeed
  namespace: commafeed
spec:
  ingressClassName: traefik
  rules:
    - host: rss.kptasznik.net
      http:
        paths:
          - backend:
              service:
                name: commafeed-service
                port:
                  number: 8082
            path: /
            pathType: Prefix
